fix: overflow retirado

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 105vh;
+  overflow: hidden;
 }
 
 main {
